src/components/Header/Header.css
.header {
    background-color: #1e6398;
    width: 100%;
    max-width: inherit;
    height: 80px;
    border-bottom: 3px solid #131518;
    position: fixed;
    top: 0;
}

h1 {
    margin: 0;
    margin-left: 15px;
    color: #cacaca
}

#nav-list {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    list-style: none;
    margin-right: 40px;
}

#animate-one:hover {
    -webkit-transform: scale(1.3);
    -ms-transform: scale(1.3);
    transform: scale(1.3);
    color: #131518;
    cursor: pointer; 
}

#animate-two:hover {
    -webkit-transform: scale(1.3);
    -ms-transform: scale(1.3);
    transform: scale(1.3);
    color: #131518;
    cursor: pointer; 
}

#animate-three:hover {
    -webkit-transform: scale(1.3);
    -ms-transform: scale(1.3);
    transform: scale(1.3);
    color: #131518;
    cursor: pointer; 
}

#animate-four:hover {
    -webkit-transform: scale(1.3);
    -ms-transform: scale(1.3);
    transform: scale(1.3);
    color: #131518;
    cursor: pointer; 
}

.nav-item{
    color: #cacaca;
    text-decoration: none;
}

.nav-item:hover{
    color: #131518;
}

@media only screen and (max-width: 450px) {
    header{
        width: 100%;
    }

}

@media only screen and (max-width: 375px) {
    header{
        width: 100%;
    }
}

